--- a/src/renderer/newtab.html
+++ b/src/renderer/newtab.html
@@ -11,12 +11,13 @@
 </head>
 <body>
   <div class="container">
-    <div class="logo"><i class="fa-solid fa-hat-wizard"></i></div>
+    <div class="logo"><i class="fa-solid fa-bat"></i></div>
     <h1>Bat Browser</h1>
     <div class="search-container">
       <i class="fa-solid fa-magnifying-glass"></i>
       <input type="text" id="url-input" placeholder="Search or type a URL" autofocus>
     </div>
+    <p class="info-text">Start typing and press Enter to search or browse the web.</p>
     <button id="close-tab-btn" title="Close this tab"><i class="fa-solid fa-xmark"></i> Close Tab</button>
   </div>
   <script src="newtab.js"></script>
