feat: Change new tab logo to moon
Replaces the bat logo on the new tab page with a moon icon. This aligns with the "Bat Browser" theme and improves visual consistency.

--- a/src/renderer/newtab.html
+++ b/src/renderer/newtab.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="container">
-    <div class="logo"><i class="fa-solid fa-bat"></i></div>
+    <div class="logo"><i class="fa-solid fa-moon"></i></div>
     <h1>Bat Browser</h1>
     <div class="search-container">
       <i class="fa-solid fa-magnifying-glass"></i>
