--- a/src/renderer/error.html
+++ b/src/renderer/error.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self' 'unsafe-inline';">
     <title>Page Load Error</title>
-    <link rel="stylesheet" href="error.css">
+    <link rel="stylesheet" href="styles/error.css">
 </head>
 <body>
     <div class="container">
