--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -129,6 +129,6 @@
     <div id="all-tabs-list-container"></div>
   </div>
 
-  <script src="renderer.js"></script>
+  <script src="renderer.js" type="module"></script>
 </body>
 </html>
