--- a/src/renderer/newtab.html
+++ b/src/renderer/newtab.html
@@ -7,7 +7,7 @@
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self' data:; script-src 'self';" />
   <title>New Tab</title>
   <link rel="stylesheet" href="../../fonts/all.min.css" />
-  <link rel="stylesheet" href="newtab.css" />
+  <link rel="stylesheet" href="styles/newtab.css" />
 </head>
 <body>
   <div class="container">
