feat(settings): Add global zoom and tab sharing controls
Introduces new settings for global page zoom and the ability to mark tabs as shared.
Also adds functionality to clear tab cache and reload.
Includes UI elements for these new settings in the Appearance tab.

New IPC handlers for tab sharing toggle and cache clear/reload.
Updated session serialization to include `isShared` and `zoomFactor` for tabs.
Refactored zoom handling to be tab-specific and added global zoom setting.

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -85,7 +85,7 @@
         <nav id="settings-sidebar">
           <ul>
             <li class="active"><a href="#appearance"><i class="fa-solid fa-palette"></i> Appearance</a></li>
-            <!-- Future sections can be added here -->
+            <li><a href="#hotkeys"><i class="fa-solid fa-keyboard"></i> Hotkeys</a></li>
           </ul>
         </nav>
         <main id="settings-main">
@@ -100,6 +100,27 @@
                     <i class="fa-solid fa-spinner fa-spin"></i> Loading system fonts...
                   </span>
                 </div>
+              </div>
+              <div class="setting-item">
+                <label for="zoom-select">Global Page Zoom</label>
+                <div class="setting-control">
+                  <select id="zoom-select">
+                    <option value="0.75">75%</option>
+                    <option value="0.9">90%</option>
+                    <option value="1">100% (Default)</option>
+                    <option value="1.1">110%</option>
+                    <option value="1.25">125%</option>
+                    <option value="1.5">150%</option>
+                    <option value="1.75">175%</option>
+                    <option value="2">200%</option>
+                  </select>
+                </div>
+              </div>
+            </section>
+            <section id="hotkeys" class="settings-section" style="display: none;">
+              <h1>Hotkeys</h1>
+              <div class="setting-item">
+                <p>Hotkey customization is coming soon!</p>
               </div>
             </section>
           </div>
