--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -28,7 +28,7 @@
           <button id="forward-btn" title="Forward" aria-label="Forward" disabled><i class="fa-solid fa-arrow-right"></i></button>
           <button id="reload-btn" title="Reload" aria-label="Reload"><i id="reload-icon" class="fa-solid fa-rotate-right"></i></button>
           <div id="address-bar-container">
-            <input type="text" id="address-bar" placeholder="Search Google or type a URL" />
+            <input type="text" id="address-bar" placeholder="Search or type a URL" />
           </div>
         </div>
       </div>
@@ -73,6 +73,10 @@
           <i class="fa-solid fa-arrow-left"></i>
           <span>Back to Browser</span>
         </button>
+        <div class="search-wrapper">
+            <i class="fa-solid fa-magnifying-glass"></i>
+            <input type="text" id="settings-search-input" placeholder="Search settings">
+        </div>
       </div>
        <div class="window-controls">
         <button id="settings-min-btn" title="Minimize" aria-label="Minimize"><i class="fa-solid fa-window-minimize"></i></button>
@@ -85,14 +89,16 @@
         <nav id="settings-sidebar">
           <ul>
             <li class="active"><a href="#appearance"><i class="fa-solid fa-palette"></i> Appearance</a></li>
+            <li><a href="#search"><i class="fa-solid fa-magnifying-glass"></i> Search</a></li>
+            <li><a href="#captures"><i class="fa-solid fa-camera"></i> Captures</a></li>
             <li><a href="#hotkeys"><i class="fa-solid fa-keyboard"></i> Hotkeys</a></li>
           </ul>
         </nav>
         <main id="settings-main">
           <div id="settings-content">
-            <section id="appearance" class="settings-section">
+            <section id="appearance" class="settings-section" data-keywords="appearance font theme color">
               <h1>Appearance</h1>
-              <div class="setting-item">
+              <div class="setting-item" data-keywords="font default page text">
                 <label for="font-select">Default Page Font</label>
                 <div class="setting-control">
                   <select id="font-select" style="display: none;"></select>
@@ -102,7 +108,33 @@
                 </div>
               </div>
             </section>
-            <section id="hotkeys" class="settings-section" style="display: none;">
+            <section id="search" class="settings-section" style="display: none;" data-keywords="search engine default google duckduckgo bing startpage">
+                <h1>Search Engine</h1>
+                <div class="setting-item" data-keywords="default search engine address bar new tab">
+                  <label for="search-engine-select">Default Search Engine</label>
+                  <div class="setting-control">
+                      <select id="search-engine-select"></select>
+                  </div>
+                </div>
+              </section>
+              <section id="captures" class="settings-section" style="display: none;" data-keywords="captures screenshot snapshot image format quality png jpeg">
+                <h1>Page Captures</h1>
+                <div class="setting-item" data-keywords="screenshot format png jpeg">
+                  <label>Screenshot Format</label>
+                  <div class="setting-control radio-group">
+                      <label><input type="radio" name="ss-format" value="png" checked> PNG</label>
+                      <label><input type="radio" name="ss-format" value="jpeg"> JPEG</label>
+                  </div>
+                </div>
+                <div class="setting-item" id="quality-setting-item" data-keywords="screenshot quality compression jpeg">
+                  <label for="ss-quality-slider">JPEG Quality</label>
+                  <div class="setting-control">
+                      <input type="range" id="ss-quality-slider" min="1" max="100" value="90">
+                      <span id="ss-quality-value">90</span>
+                  </div>
+                </div>
+              </section>
+            <section id="hotkeys" class="settings-section" style="display: none;" data-keywords="hotkeys shortcuts keyboard">
               <h1>Hotkeys</h1>
               <div class="setting-item">
                 <p>Hotkey customization is coming soon!</p>
