feat(captures): Add WebP support and improve capture quality
Implement WebP as a supported screenshot format and enhance the capture mechanism using the Page.captureScreenshot Chrome DevTools Protocol command. This allows for better control over quality settings and capturing the entire page.

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -117,17 +117,18 @@
                   </div>
                 </div>
               </section>
-              <section id="captures" class="settings-section" style="display: none;" data-keywords="captures screenshot snapshot image format quality png jpeg">
+              <section id="captures" class="settings-section" style="display: none;" data-keywords="captures screenshot snapshot image format quality png jpeg webp">
                 <h1>Page Captures</h1>
-                <div class="setting-item" data-keywords="screenshot format png jpeg">
+                <div class="setting-item" data-keywords="screenshot format png jpeg webp">
                   <label>Screenshot Format</label>
                   <div class="setting-control radio-group">
                       <label><input type="radio" name="ss-format" value="png" checked> PNG</label>
                       <label><input type="radio" name="ss-format" value="jpeg"> JPEG</label>
+                      <label><input type="radio" name="ss-format" value="webp"> WebP</label>
                   </div>
                 </div>
-                <div class="setting-item" id="quality-setting-item" data-keywords="screenshot quality compression jpeg">
-                  <label for="ss-quality-slider">JPEG Quality</label>
+                <div class="setting-item" id="quality-setting-item" data-keywords="screenshot quality compression jpeg webp">
+                  <label for="ss-quality-slider">Image Quality</label>
                   <div class="setting-control">
                       <input type="range" id="ss-quality-slider" min="1" max="100" value="90">
                       <span id="ss-quality-value">90</span>
