feat(screenshot): Implement full-page screenshot capture
Adds functionality to capture the entire content of a tab, including lazily loaded elements by auto-scrolling. Includes a visual overlay to indicate the capturing process and error handling for failed captures.

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -168,6 +168,16 @@
     <div id="all-tabs-list-container"></div>
   </div>
 
+  <div id="screenshot-overlay" class="hidden">
+    <div class="screenshot-loader">
+      <i class="fa-solid fa-camera fa-beat"></i>
+      <div class="screenshot-loader-text">
+        <h2>Capturing Page...</h2>
+        <p>Scrolling to load all content. Please wait.</p>
+      </div>
+    </div>
+  </div>
+
   <script src="renderer.js" type="module"></script>
 </body>
 </html>
