feat(screenshot): Improve scrolling and UI
Adjust scroll delays and speeds to better handle lazy-loaded content during screenshot capture.
Introduce a visual progress indicator for the screenshot process.

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -175,6 +175,7 @@
         <h2>Capturing Page...</h2>
         <p>Scrolling to load all content. Please wait.</p>
       </div>
+      <div class="screenshot-progress-bar"></div>
     </div>
   </div>
 
