feat: Add screenshot progress indicator
Introduces a visual progress bar and percentage to the screenshot capture overlay. This provides users with feedback on the screenshot process, especially for pages with a lot of content that requires scrolling.

- **Preload:** Adds `onScreenshotProgress` listener.
- **Renderer HTML:** Includes HTML elements for the progress bar and percentage.
- **IPC Main:** Updates screenshot logic to calculate and send progress updates.
- **Renderer Modules:** Connects the IPC events to update the DOM for the progress bar and percentage.
- **CSS:** Styles the new progress bar and percentage elements.

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -175,7 +175,12 @@
         <h2>Capturing Page...</h2>
         <p>Scrolling to load all content. Please wait.</p>
       </div>
-      <div class="screenshot-progress-bar"></div>
+      <div class="progress-container">
+        <div class="screenshot-progress-bar">
+          <div id="screenshot-progress-bar-value"></div>
+        </div>
+        <span id="screenshot-progress-percent">0%</span>
+      </div>
     </div>
   </div>
 
