feat(screenshot): Add ability to cancel screenshot
Introduces functionality to cancel an ongoing screenshot process. This includes UI elements in the renderer and IPC handling in the main process to signal cancellation. The screenshot progress overlay now displays a "Cancel" button, and the main process tracks active captures to honor cancellation requests. Event listeners for the cancel button are managed to prevent memory leaks.

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -181,6 +181,7 @@
         </div>
         <span id="screenshot-progress-percent">0%</span>
       </div>
+      <button id="screenshot-cancel-btn" class="cancel-btn">Cancel</button>
     </div>
   </div>
 
