--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -29,6 +29,14 @@
           <button id="reload-btn" title="Reload" aria-label="Reload"><i id="reload-icon" class="fa-solid fa-rotate-right"></i></button>
           <div id="address-bar-container">
             <input type="text" id="address-bar" placeholder="Search or type a URL" />
+            <div id="screenshot-btn-wrapper">
+              <button id="screenshot-btn" title="Capture Page" aria-label="Capture Page"><i class="fa-solid fa-camera-retro"></i></button>
+              <div id="screenshot-menu" class="hidden">
+                <button id="capture-visible-btn"><i class="fa-solid fa-desktop"></i> Capture Visible Area</button>
+                <button id="capture-full-btn"><i class="fa-solid fa-file-image"></i> Capture Full Page</button>
+                <button id="capture-area-btn"><i class="fa-solid fa-vector-square"></i> Capture Area</button>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -168,7 +176,7 @@
     <div id="all-tabs-list-container"></div>
   </div>
 
-  <div id="screenshot-overlay" class="hidden">
+  <div id="screenshot-progress-overlay" class="hidden">
     <div class="screenshot-loader">
       <i class="fa-solid fa-camera fa-beat"></i>
       <div class="screenshot-loader-text">
@@ -184,6 +192,27 @@
       <button id="screenshot-cancel-btn" class="cancel-btn">Cancel</button>
     </div>
   </div>
+
+  <div id="screenshot-selection-overlay" class="hidden">
+    <div id="screenshot-selection-info">
+      <p>Click and drag to select an area. Press <kbd>Esc</kbd> to cancel.</p>
+    </div>
+  </div>
+
+  <div id="screenshot-preview-overlay" class="hidden">
+    <div class="preview-toolbar">
+      <span class="preview-title">Capture Preview</span>
+      <div class="preview-actions">
+        <button id="screenshot-copy-btn" title="Copy to Clipboard"><i class="fa-solid fa-copy"></i> Copy</button>
+        <button id="screenshot-save-btn" class="ok-btn" title="Save to File"><i class="fa-solid fa-save"></i> Save As...</button>
+        <button id="screenshot-discard-btn" title="Discard Capture" class="cancel-btn"><i class="fa-solid fa-xmark"></i></button>
+      </div>
+    </div>
+    <div class="preview-image-container">
+      <img id="screenshot-preview-image" alt="Screenshot Preview" />
+    </div>
+  </div>
+
 
   <script src="renderer.js" type="module"></script>
 </body>
