feat: Implement custom context menu
Replaces the Electron-native context menu with a custom, CSS-styled implementation. This allows for more control over the menu's appearance and behavior within the Bat Browser application. The IPC handling for context menus has been removed from `ipc.js` and `preload.js`, and the rendering logic has moved to `custom-context-menu.js`.

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -149,6 +149,8 @@
     <div id="all-tabs-list-container"></div>
   </div>
 
+  <div id="context-menu-container"></div>
+
   <script src="renderer.js" type="module"></script>
 </body>
 </html>
