--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -52,6 +52,7 @@
       </div>
     </div>
     
+    <div id="ai-panel-resize-handle" class="hidden"></div>
     <div id="ai-panel" class="hidden">
       <div class="ai-panel-header">
           <h3><i class="fa-solid fa-robot"></i> AI Assistant</h3>
