feat(ai): Add Gemini API key management and external link opening
Introduces functionality for users to obtain and manage their Gemini API keys directly within the application settings. This includes a new button to link to Google AI Studio for key generation and improved handling of external URLs.

The `preload.js` now exposes an `openExternal` IPC handler.
The `ipc.js` implements the `app:open-external` handler, ensuring only http/https protocols are opened.
The `index.html` adds a "Get API Key" button and adjusts the layout for API key settings.
The `views.js` module adds event listeners for the new "Get API Key" button and handles external link opening.
The `ai.js` module sanitizes and formats AI responses, including support for code blocks and copy-to-clipboard functionality for code.
CSS styles have been updated to accommodate the new UI elements for API key management and code blocks.

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -146,6 +146,15 @@
             </section>
             <section id="ai" class="settings-section" style="display: none;" data-keywords="ai artificial intelligence gemini api key assistant">
               <h1>AI Assistant</h1>
+               <div class="setting-item" data-keywords="get api key gemini google ai studio">
+                  <div class="setting-label">
+                      <h2>Get your Gemini API Key</h2>
+                      <p>You can create and manage your free API keys from Google AI Studio.</p>
+                  </div>
+                  <div class="setting-control">
+                      <button id="get-api-key-btn" class="cta-button"><i class="fa-solid fa-key"></i> Get API Key</button>
+                  </div>
+              </div>
               <div class="setting-item" data-keywords="enable disable ai assistant gemini">
                   <div class="setting-label">
                       <h2>Enable AI Assistant</h2>
@@ -171,7 +180,6 @@
                   <div class="setting-item column" data-keywords="add new api key gemini">
                        <div class="setting-label">
                           <h2>Add New API Key</h2>
-                          <p>You can get a free API key from <a href="https://aistudio.google.com/app/apikey" target="_blank" id="get-api-key-link">Google AI Studio</a>.</p>
                       </div>
                       <div class="setting-control full-width">
                           <div class="add-key-form">
