feat: Implement hotkey settings
Adds functionality to view and customize hotkeys for various browser actions. This includes updating the settings UI, backend IPC handlers, and event listeners to support hotkey management.

The changes introduce:
- A new `settings:set-hotkeys` IPC handler.
- Default hotkey configurations in `settings.js`.
- A dedicated "Hotkeys" section in the settings UI.
- Logic to map hotkeys to actions and display them.
- The ability to record new hotkey bindings.

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -191,10 +191,10 @@
                   </div>
               </div>
             </section>
-            <section id="hotkeys" class="settings-section" style="display: none;" data-keywords="hotkeys shortcuts keyboard">
+            <section id="hotkeys" class="settings-section" style="display: none;" data-keywords="hotkeys shortcuts keyboard bindings keymap">
               <h1>Hotkeys</h1>
-              <div class="setting-item">
-                <p>Hotkey customization is coming soon!</p>
+              <div id="hotkey-list">
+                <!-- Hotkey items will be dynamically inserted here -->
               </div>
             </section>
           </div>
