feat: Update user agent strings and reload tabs
Update the user agent strings to more recent versions and improve the explanation regarding user agent changes for existing tabs. Ensure that active, non-hibernated tabs are reloaded to apply the new user agent immediately.

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -150,7 +150,7 @@
               <div class="setting-item" data-keywords="user agent string browser chrome firefox safari edge">
                 <div class="setting-label">
                     <h2>User Agent</h2>
-                    <p>Choose which browser Bat Browser should identify as. Changes will apply to new tabs.</p>
+                    <p>Choose which browser Bat Browser should identify as. Changes apply to existing tabs upon reload. For sites with persistent logins (like Google), you may need to clear the tab's cache manually for the change to take full effect. Right-click a tab and select 'Clear Cache and Reload'.</p>
                 </div>
                 <div class="setting-control">
                     <select id="user-agent-select"></select>
